--- a/src/assets/sass/paper/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/paper/_sidebar-and-main-panel.scss
@@ -47,17 +47,18 @@
 
     .simple-text {
       padding: $padding-small-vertical $padding-zero;
-      display: block;
+      display: flex;
       font-size: $font-size-base;
       text-align: center;
       font-weight: $font-weight-bold;
       line-height: 40px;
       text-align: left;
+      place-items: center;
 
       .logo-img{
-          width: 60px;
+          width: 40px;
           display: inline-block;
-          height: 60px;
+          height: 40px;
           margin-left: 0px;
           margin-right: 10px;
           background: white;
@@ -65,7 +66,7 @@
           text-align: center;
 
         img{
-            max-width: 60px;
+            max-width: 40px;
         }
       }
 
