Se modificó la barra del menú para que acepte iconos con el componente de FontAwesome. Se modificó el componente de Modulos para agregar funcionalidades de crear, editar y seleccionar. Se agregó el módulo de roles. Se modificó el lenguaje de los componentes de DevExtreme.

--- a/src/assets/sass/paper/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/paper/_sidebar-and-main-panel.scss
@@ -126,6 +126,15 @@
       width: 30px;
       text-align: center;
     }
+
+    svg {
+      font-size: 24px;
+      float: left;
+      margin-right: 15px;
+      line-height: 30px;
+      width: 30px;
+      text-align: center;
+    }
   }
 
   &:after,
